# postllm

./: .dockerignore  .gitignore  Cargo.toml  README.md  backlog.md  compose.candle-e2e.yaml  compose.llama-e2e.yaml  compose.ollama-e2e.yaml  compose.yaml  postllm.control
.cargo/: config.toml
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
benchmarks/: model_size_ladder.json  runtime_matrix.json
demo/: support_triage.sql
docker/: Dockerfile.pg17
docker/initdb/: 010-postllm.sh
docs/: README.md  architecture.md  benchmarks.md  candle-roadmap.md  code-quality-rubric.md  configuration.md  contributor-style-guide.md  cookbook.md  demo.md  examples.md  getting-started.md  operations.md  pgvector-integration.md  professionalization-qa.md  reference.md  runtime.md
scripts/: bench_candle.sh  bench_llama.sh  benchmark_suite.py  check_extension_upgrade.sh  demo_quickstart.sh  e2e_candle.sh  e2e_compat.sh  e2e_llama.sh  e2e_ollama.sh  package_release_artifact.sh
src/: audit.rs  backend.rs  candle.rs  catalog.rs  client.rs  conversations.rs  enum_parser.rs  error.rs  evals.rs  execution.rs  guc.rs  http_policy.rs  interrupt.rs  jobs.rs  lib.rs  operator_policy.rs  permissions.rs  prompts.rs  secrets.rs  sql.rs
src/api/: config.rs  evals.rs  inference.rs  jobs.rs  messages.rs  mod.rs  ops.rs  retrieval.rs
tests/pg_regress/sql/: setup.sql
