[package]
name = "postllm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "PostgreSQL-native LLM access built with pgrx"
license = "MIT"
readme = "README.md"
keywords = ["postgres", "postgresql", "extension", "llm", "pgrx"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_postllm"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []
candle-cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
candle-metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
candle-core = { version = "0.9.2", default-features = false }
candle-nn = { version = "0.9.2", default-features = false }
candle-transformers = { version = "0.9.2", default-features = false }
fs2 = "0.4"
hf-hub = { version = "0.5", default-features = false, features = ["rustls-tls", "ureq"] }
pgrx = "=0.17.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }

[dev-dependencies]
pgrx-tests = "=0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.rust]
missing_docs = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[lints.clippy]
all = { level = "deny", priority = 30 }
pedantic = { level = "deny", priority = 20 }
nursery = { level = "deny", priority = 10 }
dbg_macro = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
wildcard_enum_match_arm = "deny"
